// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown [NEGATIVE] should render with wrong \`items\` prop 1`] = `
.c0 {
  position: relative;
  width: 100%;
}

.c3 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  grid-area: label;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c4 {
  grid-area: right-icon;
}

.c1 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  display: grid;
  grid-template-areas: ' label right-icon';
  grid-template-columns: 1fr 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid rgba(0,0,0,0.08);
  border-top-width: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c1:hover {
  cursor: pointer;
}

.c2 {
  border-top-width: 0.0625rem;
  border-color: !important;
  border-radius: 0.25rem;
}

.c2:hover {
  border-color: #2F65E0;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="dropdown"
    >
      <div
        class="c1 c2"
        data-testid="value-item"
      >
        <div
          class="c3"
        />
        <svg
          class="c4"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Dropdown [NEGATIVE] should render with wrong props 1`] = `
.c0 {
  position: relative;
  width: 100%;
}

.c3 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  grid-area: label;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c4 {
  grid-area: right-icon;
}

.c1 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  display: grid;
  grid-template-areas: ' label right-icon';
  grid-template-columns: 1fr 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid rgba(0,0,0,0.08);
  border-top-width: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c1:hover {
  cursor: pointer;
}

.c2 {
  border-top-width: 0.0625rem;
  border-color: !important;
  border-radius: 0.25rem;
}

.c2:hover {
  border-color: #2F65E0;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="dropdown"
    >
      <div
        class="c1 c2"
        data-testid="value-item"
      >
        <div
          class="c3"
        />
        <svg
          class="c4"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Dropdown [NEGATIVE] should render without props 1`] = `
.c0 {
  position: relative;
  width: 100%;
}

.c3 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #808080;
  grid-area: label;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c4 {
  grid-area: right-icon;
}

.c1 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  display: grid;
  grid-template-areas: ' label right-icon';
  grid-template-columns: 1fr 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid rgba(0,0,0,0.08);
  border-top-width: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c1:hover {
  cursor: pointer;
}

.c2 {
  border-top-width: 0.0625rem;
  border-color: !important;
  border-radius: 0.25rem;
}

.c2:hover {
  border-color: #2F65E0;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="dropdown"
    >
      <div
        class="c1 c2"
        data-testid="value-item"
      >
        <div
          class="c3"
        />
        <svg
          class="c4"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Dropdown check dropdown open menu on click 1`] = `
.c0 {
  position: relative;
  width: 100%;
}

.c3 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  grid-area: label;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c4 {
  grid-area: right-icon;
}

.c1 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  display: grid;
  grid-template-areas: ' label right-icon';
  grid-template-columns: 1fr 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid rgba(0,0,0,0.08);
  border-top-width: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c1:hover {
  cursor: pointer;
}

.c2 {
  border-top-width: 0.0625rem;
  border-color: !important;
  border-radius: 0.25rem;
}

.c2:hover {
  border-color: #2F65E0;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="dropdown"
    >
      <div
        class="c1 c2"
        data-testid="value-item"
      >
        <div
          class="c3"
        >
          2
        </div>
        <svg
          class="c4"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Dropdown check menu item quantity in dropdown menu open 1`] = `
.c0 {
  position: relative;
  width: 100%;
}

.c3 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  grid-area: label;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c4 {
  grid-area: right-icon;
}

.c1 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  display: grid;
  grid-template-areas: ' label right-icon';
  grid-template-columns: 1fr 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid rgba(0,0,0,0.08);
  border-top-width: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c1:hover {
  cursor: pointer;
}

.c2 {
  border-top-width: 0.0625rem;
  border-color: !important;
  border-radius: 0.25rem;
}

.c2:hover {
  border-color: #2F65E0;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="dropdown"
    >
      <div
        class="c1 c2"
        data-testid="value-item"
      >
        <div
          class="c3"
        >
          2
        </div>
        <svg
          class="c4"
        />
      </div>
    </div>
  </div>
</body>
`;

exports[`Dropdown test dropdown loading state 1`] = `
.c4 {
  fill: #4475E3;
  -webkit-animation: 1.1s infinite cilQsd cubic-bezier(0.45,0.05,0,1);
  animation: 1.1s infinite cilQsd cubic-bezier(0.45,0.05,0,1);
}

.c0 {
  position: relative;
  width: 100%;
}

.c3 {
  font-family: Inter,sans-serif;
  font-size: 0.875rem;
  line-height: 1.3125rem;
  font-weight: 400;
  font-style: normal;
  color: #474747;
  grid-area: label;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
}

.c1 {
  width: 100%;
  height: 3.5rem;
  padding: 0 1rem;
  padding-right: 0.5rem;
  box-sizing: border-box;
  display: grid;
  grid-template-areas: ' label right-icon';
  grid-template-columns: 1fr 24px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  background-color: #F7F8FA;
  border: 0.0625rem solid rgba(0,0,0,0.08);
  border-top-width: 0;
  -webkit-transition: all 300ms cubic-bezier(0.45,0.05,0,1);
  transition: all 300ms cubic-bezier(0.45,0.05,0,1);
}

.c1:hover {
  cursor: pointer;
}

.c2 {
  border-top-width: 0.0625rem;
  border-color: #4475E3 !important;
  border-radius: 0.25rem;
}

.c2:hover {
  border-color: #2F65E0;
}

<body>
  <div>
    <div
      class="c0"
      data-testid="dropdown"
    >
      <div
        class="c1 c2"
        data-testid="value-item"
      >
        <div
          class="c3"
        >
          2
        </div>
        <svg
          class="c4"
          data-testid="spinner"
        />
      </div>
    </div>
  </div>
</body>
`;
